# podcast-summarizer

./: .gitignore  README.md  config.json  delivery.py  downloader.py  error.txt  poddigest.py  post_processor.py  pyproject.toml  queue_lock.py  requirements.md  summarizer.py  transcript_scrubber.py
docs/: delivery.md  downloader.md  plan.md  poddigest.md  post_processor.md  requirements.md  scheduling.md  scrubber.md  summarizer.md
docs/spikes/: transcription-sources.md
launchd/: com.ccm.podcast-summarizer.plist
prompts/: summary_prompt.md
scripts/: install-launchd.sh  run-scheduled-poddigest.sh
summaries/20vc/: 20260716-20vc-HoRaqNWKcpM-zuckerberg-back-on-x-challenging-codex-claude-code-sk-hynixs-26bn-ipo-summary.md
summaries/all-in/: 20260717-all-in-9IMwRIei-Xc-can-the-ai-industry-regulate-itself-stripe-wants-paypal-china-catches-up-ny-bans-summary.md
tests/: check_youtube_transcript_access.py  test_delivery.py  test_downloader.py  test_poddigest.py  test_post_processor.py  test_queue_lock.py  test_summarizer.py  test_transcript_scrubber.py
